# ids-gatekeeper-specialists

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  diagrama.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
article/: 00_outline.md  01_abstract.md  02_introduction.md  03_related_works.md  04_methodology.md  08_conclusion.md  draft_full.md
artifacts/: README.md
artigo/: 00_outline.md  01_resumo.md  02_introducao.md  03_trabalhos_relacionados.md  04_metodologia.md  05_experimentos.md  06_resultados.md  07_discussao.md  08_conclusao.md  artigo_completo.docx  artigo_completo.md  artigo_completo_export_docx.md  artigo_gks_final.docx  auditoria_experimental_paper.md  checklist_execucao_experimental.md  ficha_mestra_paper.md  mapa_mental_ia_aplicada.md  plano_mestre_execucao_experimental.md  revisao_manual_final.txt  roteiro_execucao_cic_baseline.md  template-word---modelo-alternativo---versao-1.2024.docx
data/: README.md
docs/: ARCHITECTURE.md  REPORTS.md  WORKFLOW.md  cic_eval_report.md  experiment_plan.md  paper_experimental_plan.md  project_scope.md  unsw_eval_report.md
references/: references.bib
reports/: README.md  confusion_matrix_baseline.csv  confusion_matrix_baseline.md  confusion_matrix_main.csv  confusion_matrix_main.md  confusion_matrix_unsw_bin.csv  confusion_matrix_unsw_bin.md  latency_summary.csv  latency_summary.md  metrics_comparados.csv  metrics_comparados.md  run_manifest.md  table_baseline_comparison.csv  table_baseline_comparison.md  table_main_results.csv  table_main_results.md
scripts/: README.md  download_unsw.py  (+25 more)
(+46 files in other folders)
